# Infotecs_CPP_testovoe

./: CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
